Add local music provider implementation with album and artist services